Fixed an issue in `<SearchInput />` where results would still be clickable when not visible, and another where they weren't clickable even though they were visible

--- a/src/components/pages/landing/SearchInput/SearchInput.module.scss
+++ b/src/components/pages/landing/SearchInput/SearchInput.module.scss
@@ -74,26 +74,17 @@
 			opacity: 0;
 			height: 0;
 			border: none;
+			overflow: hidden;
 		}
 	
 
-		> li.result-row {
+		> li.result {
+			display: block;
+			padding: 0.6rem 1rem;
+			cursor: pointer;
+			
 			&:hover {
 				background-color: colours.$highlighted-primary-background;
-			}
-
-			> .result {
-				appearance: none;
-				border: none;
-				background: transparent;
-				display: block;
-				width: 100%;
-				padding: 0.6rem 1rem;
-				color: inherit;
-				text-decoration: none;
-				cursor: pointer;
-				font-size: 1rem;
-				text-align: left;
 			}
 		}
 		
